Make sure comments are wrapped in same container as story, so spacing and crap is even

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -137,7 +137,8 @@ $nav_background_color:$trib-blue2;
 
 .comments-wrapper{
 	border-bottom: 4px solid $trib-blue2;
-	padding:30px 0 15px 0;
+	padding-top: 15px;
+	// padding:30px 0 15px 0;
 }
 
 
